# grabbit

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md  configuration.md  extension.md  import-jdownloader.md  install.md  mcp.md
docs/deploy/: Caddyfile  nginx.conf  traefik-compose.yml
extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js
grabbit/: __init__.py  __main__.py  api.py  app.py  auth.py  config.py  db.py  engine.py  events.py  jd_import.py  logging_setup.py  mcp_server.py  metrics.py  models.py  ssrf.py  worker.py
tests/: conftest.py  test_api.py  test_auto_retry.py  test_clear_finished.py  test_config_logging.py  test_download_speed.py  test_engine_and_resume.py  test_extension_download.py  test_file_count.py  test_flatten_migration.py  test_incomplete_layout.py  test_jd_import.py  test_mcp.py  test_merge.py  test_pin.py  test_rename.py  test_settings.py  test_title.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  KeysPanel.tsx  SettingsPanel.tsx  api.ts  style.css
