[project]
name = "grabbit"
version = "0.1.0"
description = "Modern, self-hosted, web-native download manager powered by gallery-dl"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "prometheus-client>=0.20",
    "gallery-dl>=1.29",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
    "httpx>=0.27",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
grabbit = "grabbit.__main__:main"
grabbit-mcp = "grabbit.mcp_server:main"
grabbit-import-jd = "grabbit.jd_import:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["grabbit*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]
ignore = ["B008"]  # Depends(...) in defaults is the FastAPI idiom

[tool.mypy]
python_version = "3.12"
strict = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
